# irmin-py

./: .gitignore  CHANGES.md  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: docs.yml  python.yml
doc/: index.html
examples/: json-merge.py  tezos.py  util.py
irmin/: __init__.py  bindings.py  irmin.py  irmin_ffi.py
